# jupyter-book-tutorial

./: _toc.yml  doba.md  intro.html  notebooks.ipynb  pyproject.toml  searchindex.js
_build/.doctrees/: environment.pickle  intro.doctree  markdown.doctree
_build/html/: .buildinfo  notebooks.html  searchindex.js
_build/jupyter_execute/: markdown-notebooks.ipynb
_sources/: intro.md
myfirstbook/: _toc.yml
myfirstbook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  notebooks.doctree
myfirstbook/_build/html/: genindex.html  notebooks.html  objects.inv  search.html
myfirstbook/_build/jupyter_execute/: notebooks.ipynb
