[tool.poetry]
name = "jupyter-book-tutorial"
version = "0.1.0"
description = ""
authors = ["Doba97 <168038892+Doba97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
polars = "^1.16.0"
altair = "^5.5.0"
plotly = "^5.24.1"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
scipy = "^1.14.1"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
